# calculator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO.md  coverage.html
.github/workflows/: ci.yml
bench/: CMakeLists.txt  calculator_bench.cc
cmake/: SpecialTargets.cmake
fuzz/: CMakeLists.txt  calculator.dict  calculator_fuzz.cc
src/apps/: CMakeLists.txt  calc_cli.cc  calc_gui.cc
src/libs/: CMakeLists.txt
src/libs/bindings/c/: CMakeLists.txt  calc_c_api.cc  calc_c_api.h
src/libs/bindings/javascript/: CMakeLists.txt  calc_js_api.cc  calculator.js  calculator.wasm
src/libs/bindings/python/: CMakeLists.txt  pyproject.toml  setup.py
src/libs/bindings/python/calc/: __init__.py
src/libs/core/: calculator.cc  evaluator.cc  parser.cc  tokenizer.cc
src/libs/core/include/calc/: calculator.h  evaluator.h  parser.h  token.h  tokenizer.h
test/: CMakeLists.txt  calculator_test.cc  evaluator_test.cc  parser_test.cc  tokenizer_test.cc
